--- a/discrimination_counterbalancing.ipynb
+++ b/discrimination_counterbalancing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,13 @@
     "import numpy as np \n",
     "from itertools import permutations  \n",
     "import itertools\n",
-    "from itertools import combinations"
+    "from itertools import combinations\n",
+    "import operator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +89,12 @@
        "48"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import operator\n",
-    "\n",
     "# sort observations by increasing depth (dict value)\n",
     "sorted_tuples = sorted(observations.items(), key=operator.itemgetter(1))\n",
     "sorted_dict = {k: v for k, v in sorted_tuples}\n",
@@ -107,27 +106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('002272_2014-06-28_18-53-56_260595134347_rgbf000067-resize_2', 1.138),\n",
-       " ('002509_2014-06-24_13-19-22_094959634447_rgbf000077-resize_0', 1.3065),\n",
-       " ('000483_2014-06-09_20-41-45_260595134347_rgbf000116-resize_4',\n",
-       "  1.3370000000000002),\n",
-       " ('000109_2014-05-14_23-41-52_260595134347_rgbf000035-resize_9', 1.3545)]"
-      ]
-     },
-     "execution_count": 264,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped_observations[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -138,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -146,56 +128,60 @@
      "output_type": "stream",
      "text": [
       "48\n",
-      "6 (48,)\n"
+      "3 (48,)\n"
      ]
     }
    ],
    "source": [
     "# tuples represent the indeces of images within the 4 image group \n",
-    "combinations = list(combinations([0,1,2,3],2))\n",
-    "bins_combinations = [copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations),\n",
-    "                     copy.deepcopy(combinations),copy.deepcopy(combinations),copy.deepcopy(combinations)]\n",
+    "# each sublist has 2 combinations with no image repetition \n",
+    "combs = [[(0,1),(2,3)], [(0,2), (1,3)], [(0,3), (1,2)]]\n",
+    "bins_combinations = [copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs),\n",
+    "                     copy.deepcopy(combs),copy.deepcopy(combs),copy.deepcopy(combs)]\n",
     "print(len(bins_combinations))\n",
     "\n",
-    "sequences = np.array([[None]*48]*6, dtype=object)\n",
+    "sequences = np.array([[None]*48]*3, dtype=object)\n",
     "print(len(sequences), sequences[0].shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for seq in range(6): # 6 sequences total to completely cover the set of comparisons \n",
+    "for seq in range(3): # 3 sequences total to completely cover the set of comparisons \n",
     "    for i in range(len(bins_combinations)): # 48 bins\n",
-    "        # randomly select an image index combo \n",
-    "        random_combo = random.choice(bins_combinations[i])\n",
-    "        random_combo_idx = bins_combinations[i].index(random_combo)\n",
+    "        # randomly select a list of combos \n",
+    "        # the random pick is a list of two sets of image combos within that bin \n",
+    "        random_picks = random.choice(bins_combinations[i])\n",
+    "        random_idx = bins_combinations[i].index(random_picks)\n",
+    "\n",
     "        # remove the selected image index combo \n",
-    "        del bins_combinations[i][random_combo_idx]\n",
+    "        del bins_combinations[i][random_idx]\n",
+    "\n",
     "        # add selected combo to sequence[seq]\n",
-    "        sequences[seq][i]= random_combo\n",
+    "        sequences[seq][i]= random_picks\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +190,33 @@
        "(48,)"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sequences[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 3), (1, 2)]"
+      ]
+     },
+     "execution_count": 384,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequences[0][0]"
    ]
   },
   {
@@ -224,24 +230,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
-    "destination = '/Users/prachi/Documents/depth_duration/depth_discrimination/discrimination_sequences'\n",
-    "\n"
+    "destination = '/Users/prachi/Documents/depth_duration/depth_discrimination/discrimination_sequences'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
     "sequence_dictionaries = []\n",
     "rotated_sequence_dictionaries = [] # order of images is flipped\n",
-    "seq_names = ['c0', 'c1', 'c2', 'c3', 'c4', 'c5']\n",
+    "seq_names = ['c0', 'c1', 'c2']\n",
     "durations = [250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
+    "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
+    "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
+    "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
+    "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
+    "             250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
     "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
     "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
     "             250, 1000, 250, 1000, 250, 1000, 250, 1000, 250, 1000,\n",
@@ -254,54 +264,59 @@
     "    rotated_seq = []\n",
     "    sequence_name = seq_names[i]\n",
     "    rotated_seq_name = seq_names[i] + '_rotated' # order rotated\n",
-    "    num = 0\n",
-    "    for trial in sequences[i]:\n",
-    "        img0_index = trial[0]\n",
-    "        img1_index = trial[1]\n",
-    "        dict_trial = {}\n",
-    "        dict_trial[\"sequence\"] = sequence_name\n",
-    "        dict_trial[\"duration\"] = durations[num]\n",
-    "        dict_trial[\"depth_0\"] = grouped_observations[num][img0_index][1]\n",
-    "        dict_trial[\"depth_1\"] = grouped_observations[num][img1_index][1]\n",
+    "    num = 0 # iterator for bins (48 total)\n",
+    "    dur_num = 0 # iterator that ensures each mask is unique and is the index for durations (list)\n",
+    "    for bin_trials in sequences[i]: # loop through the 48 bins\n",
+    "        for trial in bin_trials: # loop through the 2 sets of image combos ex. [(0,1), (2, 3)]\n",
+    "            img0_index = trial[0]\n",
+    "            img1_index = trial[1]\n",
+    "            dict_trial = {}\n",
+    "            dict_trial[\"sequence\"] = sequence_name\n",
+    "            dict_trial[\"duration\"] = durations[num]\n",
+    "            dict_trial[\"depth_0\"] = grouped_observations[num][img0_index][1]\n",
+    "            dict_trial[\"depth_1\"] = grouped_observations[num][img1_index][1]\n",
     "\n",
-    "        targetimg_0 = grouped_observations[num][img0_index][0]\n",
-    "        targetimg_1 = grouped_observations[num][img1_index][0]\n",
-    "        # this has to be the path on the server\n",
-    "        targetimg_0_path = \"depth_discrimination_stimuli/\" + targetimg_0 + '/' + targetimg_0 + '-target.png'\n",
-    "        targetimg_1_path = \"depth_discrimination_stimuli/\" + targetimg_1 + '/' + targetimg_1 + '-target.png'\n",
+    "            targetimg_0 = grouped_observations[num][img0_index][0]\n",
+    "            targetimg_1 = grouped_observations[num][img1_index][0]\n",
+    "            # this has to be the path on the server\n",
+    "            targetimg_0_path = \"depth_discrimination_stimuli/\" + targetimg_0 + '/' + targetimg_0 + '-target.png'\n",
+    "            targetimg_1_path = \"depth_discrimination_stimuli/\" + targetimg_1 + '/' + targetimg_1 + '-target.png'\n",
     "\n",
-    "        dict_trial[\"image_path_target_0\"] = targetimg_0_path\n",
-    "        dict_trial[\"image_path_target_1\"] = targetimg_1_path\n",
+    "            dict_trial[\"image_path_target_0\"] = targetimg_0_path\n",
+    "            dict_trial[\"image_path_target_1\"] = targetimg_1_path\n",
     "\n",
-    "        dict_trial[\"mask_path\"] = \"masks/mask_\" + str(num) + \".jpg\"\n",
-    "        dict_trial[\"fixation_path\"] = \"fixation.jpg\"\n",
+    "            dict_trial[\"mask_path\"] = \"masks/mask_\" + str(num) + \".jpg\"\n",
+    "            dict_trial[\"fixation_path\"] = \"fixation.jpg\"\n",
     "\n",
-    "        seq.append(dict_trial)\n",
-    "        ###################### Rotated sequence ######################\n",
-    "        rotated_dict_trial = {}\n",
-    "        rotated_dict_trial[\"sequence\"] = rotated_seq_name\n",
-    "        rotated_dict_trial[\"duration\"] = durations[num]\n",
-    "        rotated_dict_trial[\"depth_0\"] = grouped_observations[num][img1_index][1]\n",
-    "        rotated_dict_trial[\"depth_1\"] = grouped_observations[num][img0_index][1]\n",
+    "            seq.append(dict_trial)\n",
+    "            ###################### Rotated sequence ######################\n",
+    "            rotated_dict_trial = {}\n",
+    "            rotated_dict_trial[\"sequence\"] = rotated_seq_name\n",
+    "            rotated_dict_trial[\"duration\"] = durations[dur_num]\n",
+    "            dur_num += 1\n",
+    "            rotated_dict_trial[\"depth_0\"] = grouped_observations[num][img1_index][1]\n",
+    "            rotated_dict_trial[\"depth_1\"] = grouped_observations[num][img0_index][1]\n",
     "\n",
-    "        r_targetimg_0 = grouped_observations[num][img1_index][0]\n",
-    "        r_targetimg_1 = grouped_observations[num][img0_index][0]\n",
-    "        # this has to be the path on the server\n",
-    "        r_targetimg_0_path = \"depth_discrimination_stimuli/\" + r_targetimg_1 + '/' + r_targetimg_1 + '-target.png'\n",
-    "        r_targetimg_1_path = \"depth_discrimination_stimuli/\" + r_targetimg_0 + '/' + r_targetimg_0 + '-target.png'\n",
+    "            r_targetimg_0 = grouped_observations[num][img1_index][0]\n",
+    "            r_targetimg_1 = grouped_observations[num][img0_index][0]\n",
+    "            # this has to be the path on the server\n",
+    "            r_targetimg_0_path = \"depth_discrimination_stimuli/\" + r_targetimg_1 + '/' + r_targetimg_1 + '-target.png'\n",
+    "            r_targetimg_1_path = \"depth_discrimination_stimuli/\" + r_targetimg_0 + '/' + r_targetimg_0 + '-target.png'\n",
     "\n",
-    "        rotated_dict_trial[\"image_path_target_0\"] = r_targetimg_1_path\n",
-    "        rotated_dict_trial[\"image_path_target_1\"] = r_targetimg_0_path\n",
+    "            rotated_dict_trial[\"image_path_target_0\"] = r_targetimg_1_path\n",
+    "            rotated_dict_trial[\"image_path_target_1\"] = r_targetimg_0_path\n",
     "\n",
-    "        rotated_dict_trial[\"mask_path\"] = \"masks/mask_\" + str(num) + \".jpg\"\n",
-    "        rotated_dict_trial[\"fixation_path\"] = \"fixation.jpg\"\n",
+    "            rotated_dict_trial[\"mask_path\"] = \"masks/mask_\" + str(dur_num) + \".jpg\"\n",
+    "            rotated_dict_trial[\"fixation_path\"] = \"fixation.jpg\"\n",
     "\n",
-    "        rotated_seq.append(rotated_dict_trial)\n",
-    "        \n",
+    "            rotated_seq.append(rotated_dict_trial)\n",
+    "\n",
     "        num += 1\n",
-    "    \n",
+    "\n",
     "    # shuffle the order of trials so that trials are not in order of increasing depth \n",
     "    # use the same random seed for sequence & it's rotation so trials match in images \n",
+    "    random.Random(i).shuffle(seq)\n",
+    "    random.Random(i).shuffle(rotated_seq)\n",
     "    random.Random(i).shuffle(seq)\n",
     "    random.Random(i).shuffle(rotated_seq)\n",
     "\n",
@@ -336,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -428,11 +443,12 @@
     "- c0_rotated: order of images if flipped\n",
     "- c0_rotated_dr: duration assigned is rotated\n",
     "\n",
-    "6 original sequences \n",
-    "- covers the whole space of combinations of 4 images\n",
+    "3 original sequences \n",
+    "- covers the whole space of 2 trial combinations within the 48 bins \n",
+    "- 96 trials total, with 2 trials from each bin \n",
     "\n",
     "\n",
-    "24 Total sequences"
+    "12 Total sequences"
    ]
   },
   {
@@ -459,6 +475,25 @@
     "\n",
     "count"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5 min, 1 dollar\n",
+    "- test time it takes to complete experiment\n",
+    "\n",
+    "Consider running experiment bundles\n",
+    "- prefer orthogonal tasks\n",
+    "- counterbalance the order of the experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
