--- a/discrimination_analysis.ipynb
+++ b/discrimination_analysis.ipynb
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,6 +578,7 @@
     "        \n",
     "        # remove trials that are outside the outlier range\n",
     "        c = 0\n",
+    "        c_missed = 0\n",
     "        for idx, row in subj_df.iterrows():\n",
     "            stim1 = row['stimulus_0']\n",
     "            stim2 = row['stimulus_1']\n",
@@ -590,12 +591,15 @@
     "                if depth0 > depth1:\n",
     "                    correct_choice = 1\n",
     "                choice = row[\"discrim_choice\"]\n",
+    "                if choice == 2.0:\n",
+    "                    c_missed += 1\n",
     "                if choice == correct_choice:\n",
     "                    count_correct += 1\n",
     "                # remove catch trial \n",
     "                cleaned_subj_df.drop([idx], inplace=True)\n",
     "#                 print(depth0, depth1, correct_choice, choice)\n",
-    "        print(c)\n",
+    "        print(c_missed, 'Number of catch trials where participants did not see the target')\n",
+    "#         print(c)\n",
     "        print(count_correct)\n",
     "        if count_correct < correct_requirement:\n",
     "            print('Number correct:', count_correct)\n",
@@ -624,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,32 +652,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
+      "4 Number of catch trials where participants did not see the target\n",
       "4\n",
       "Number correct: 4\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "8\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "8\n",
-      "8\n",
-      "8\n",
-      "8\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "7\n",
-      "8\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "4\n",
       "Number correct: 4\n",
-      "8\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "7\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "8\n",
+      "0 Number of catch trials where participants did not see the target\n",
       "8\n",
-      "8\n",
-      "8\n",
-      "8\n",
+      "1 Number of catch trials where participants did not see the target\n",
       "5\n",
       "Number correct: 5\n",
       "Number of participants that did not pass the catch trial check: 3\n",
@@ -838,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,36 +856,40 @@
     "    count_correct = 0\n",
     "    count_incorrect = 0\n",
     "    count_total = 0\n",
+    "    count_missed = 0\n",
     "    for idx, row in df.iterrows():\n",
-    "        count_total += 1\n",
-    "        depth0 = row[\"actual_depth_0\"]\n",
-    "        depth1 = row[\"actual_depth_1\"]\n",
-    "        if depth0 < depth1:\n",
-    "            correct_choice = 0\n",
-    "        if depth0 > depth1:\n",
-    "            correct_choice = 1\n",
-    "        if depth0 == depth1:\n",
-    "            # case where depths are equal \n",
-    "            correct_choice = None\n",
     "        choice = row[\"discrim_choice\"]\n",
-    "        if choice == correct_choice:\n",
-    "            count_correct += 1\n",
+    "        if choice == 2.0:\n",
+    "            count_missed += 1\n",
+    "        else:    \n",
+    "            count_total += 1\n",
+    "            depth0 = row[\"actual_depth_0\"]\n",
+    "            depth1 = row[\"actual_depth_1\"]\n",
+    "            if depth0 < depth1:\n",
+    "                correct_choice = 0\n",
+    "            if depth0 > depth1:\n",
+    "                correct_choice = 1\n",
+    "            if depth0 == depth1:\n",
+    "                # case where depths are equal \n",
+    "                correct_choice = None\n",
+    "            if choice == correct_choice:\n",
+    "                count_correct += 1\n",
     "    \n",
-    "    return count_correct/count_total, count_correct, count_total"
+    "    return count_correct/count_total, count_correct, count_total, count_missed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.5319148936170213, 100, 188)"
+       "(0.5319148936170213, 100, 188, 0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
