--- a/discrimination_analysis.ipynb
+++ b/discrimination_analysis.ipynb
@@ -1647,9 +1647,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 787,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       depth_discrimination_stimuli/000109_2014-05-14...\n",
+      "3       depth_discrimination_stimuli/000742_2014-06-08...\n",
+      "28      depth_discrimination_stimuli/000542_2014-06-08...\n",
+      "36      depth_discrimination_stimuli/002678_2014-06-13...\n",
+      "42      depth_discrimination_stimuli/003083_2014-06-15...\n",
+      "                              ...                        \n",
+      "1150    depth_discrimination_stimuli/000927_2014-06-09...\n",
+      "1160    depth_discrimination_stimuli/001618_2014-06-20...\n",
+      "1165    depth_discrimination_stimuli/003083_2014-06-15...\n",
+      "1188    depth_discrimination_stimuli/003292_2014-05-14...\n",
+      "1190    depth_discrimination_stimuli/000927_2014-06-09...\n",
+      "Name: stimulus_0, Length: 76, dtype: object\n",
+      "6       depth_discrimination_stimuli/000869_2014-06-09...\n",
+      "27      depth_discrimination_stimuli/002509_2014-06-24...\n",
+      "35      depth_discrimination_stimuli/000137_2014-05-20...\n",
+      "38      depth_discrimination_stimuli/001133_2014-06-17...\n",
+      "46      depth_discrimination_stimuli/000800_2014-06-08...\n",
+      "                              ...                        \n",
+      "1155    depth_discrimination_stimuli/003423_2014-05-21...\n",
+      "1162    depth_discrimination_stimuli/000800_2014-06-08...\n",
+      "1182    depth_discrimination_stimuli/000549_2014-06-08...\n",
+      "1193    depth_discrimination_stimuli/002467_2014-06-28...\n",
+      "1195    depth_discrimination_stimuli/003423_2014-05-21...\n",
+      "Name: stimulus_0, Length: 74, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "depth_diffs = np.arange(0.24,0.54, 0.04)\n",
     "\n",
@@ -1660,6 +1691,8 @@
     "    diff_bin_df = final_discrim[(final_discrim['depth_difference'] >= diff) & (final_discrim['depth_difference'] < diff + 0.04)]\n",
     "    diff_bin_df_250ms = diff_bin_df[diff_bin_df['duration'] == 250.0]\n",
     "    diff_bin_df_1000ms = diff_bin_df[diff_bin_df['duration'] == 1000.0]\n",
+    "    if 0.45< diff <0.52:\n",
+    "        print(diff_bin_df['stimulus_0'])\n",
     "    \n",
     "    diff_acc_250 = get_accuracy(diff_bin_df_250ms)\n",
     "    diff_acc_1000 = get_accuracy(diff_bin_df_1000ms)\n",
