--- a/VE_coded_discrimination_analysis.ipynb
+++ b/VE_coded_discrimination_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "342"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "[13680 rows x 29 columns]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "         72,   64,   58,   25, 1987, 1974])"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "       27, 66, 56, 72, 39, 36, 70, 59, 64, 58, 25, 57, 67])"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,13 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -827,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +894,7 @@
        " 'discrim_jsons/v2_shuffled_g0.json': 48}"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +965,7 @@
        "       385749., 210652., 755967.])"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1361,7 @@
        "  'std1': 0.28344868879112933})"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1427,7 @@
        "  'std1': 0.4181498748134327})"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,15 +1437,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Save answer keys and final_discrim to external files"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json \n",
+    "\n",
+    "dest = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/depth_discrimination/TAC_discrim_datafiles'\n",
+    "\n",
+    "with open(dest + \"/n_VE_answerkey_250.json\", \"w\") as outfile:\n",
+    "    json.dump(n_VE_answerkey_250, outfile)\n",
+    "    \n",
+    "with open(dest + \"/n_VE_answerkey_1000.json\", \"w\") as outfile:\n",
+    "    json.dump(n_VE_answerkey_1000, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_discrim.to_csv(dest + '/TAC_final_discrim.csv') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VE Coded Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1630,7 @@
        " 'JV_regressor_1000': 0.03688879424346675}"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1679,7 @@
        "(0.6494149185458284, 0.6603926608017532)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1706,7 @@
        "(0.6177114340931791, 5.405997090885836e-08)"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1734,7 @@
        "(0.6877811799813451, 3.422231405495296e-10)"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2471,7 +2499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
