--- a/split_matrices.ipynb
+++ b/split_matrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_discrim_path = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/depth_discrimination/TAC_discrim_datafiles/matched_discrim_data/final_discrim.csv'\n"
+    "# final_discrim_path = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/depth_discrimination/TAC_discrim_datafiles/matched_discrim_data/final_discrim.csv'\n",
+    "\n",
+    "final_discrim_path = '/Users/pmahableshwarkar/Documents/Depth_Project/depth_discrimination/TAC_discrim_datafiles/matched_discrim_data/final_discrim.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,18 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_VE_data_250_path = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/verbal_judgement_analysis/TAC_data/matched_VE_data/normalized_250_data.csv'\n",
+    "# n_VE_data_250_path = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/verbal_judgement_analysis/TAC_data/matched_VE_data/normalized_250_data.csv'\n",
+    "n_VE_data_250_path = '/Users/pmahableshwarkar/Documents/Depth_Project/verbal_judgement_analysis/TAC_data/matched_VE_data/normalized_250_data.csv'\n",
     "\n",
-    "n_VE_data_1000_path = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/verbal_judgement_analysis/TAC_data/matched_VE_data/normalized_1000_data.csv'\n"
+    "# n_VE_data_1000_path = '/Users/prachimahableshwarkar/Documents/GW/Depth_MTurk/verbal_judgement_analysis/TAC_data/matched_VE_data/normalized_1000_data.csv'\n",
+    "n_VE_data_1000_path = '/Users/pmahableshwarkar/Documents/Depth_Project/verbal_judgement_analysis/TAC_data/matched_VE_data/normalized_1000_data.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def get_stimuli(duration_df):\n",
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +228,7 @@
        "False"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,8 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def get_accuracy(df):\n",
@@ -289,8 +301,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def individual_discrimination_stats(df):\n",
@@ -358,8 +374,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def get_answerkey(discrim_performance, VE_data):\n",
@@ -438,8 +458,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def VE_accuracy(stim0, df, answerkey):\n",
@@ -577,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -649,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 24,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -752,12 +776,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def matched_performance(VE_Performance, discrimination_performance, duration):\n",
@@ -804,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 25,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -894,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
